exports[`matic async fees for nfts get fee for nft 1155 1`] = `
{
  "extraFeeData": {},
  "fee": "0.00325836 MATICNATIVE",
  "gasLimit": 24136,
  "gasPrice": "0.000000135 MATICNATIVE",
  "tipGasPrice": "0.000000035 MATICNATIVE",
  "unsignedTx": {
    "txData": {
      "chainId": 137,
      "transactionBuffer": "02f8f2818980850826299e00851f6ea08600825e4894bb42bf5aebbbeaef9335d8b497fb2cff2a010eed80b8c4f242432a000000000000000000000000464f62159e067a8c231b5c3f9a7144e191750051000000000000000000000000464f62159e067a8c231b5c3f9a7144e1917500510000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000000a00000000000000000000000000000000000000000000000000000000000000000c0808080",
    },
    "txMeta": {
      "amount": "0 MATICNATIVE",
      "assetName": "matic",
      "bumpTxId": undefined,
      "eip1559Enabled": true,
      "fee": "0.00325836 MATICNATIVE",
      "fromAddress": "0x464F62159e067a8C231b5c3F9A7144E191750051",
      "toAddress": "0x464F62159e067a8C231b5c3F9A7144E191750051",
    },
  },
}
`;

exports[`matic async fees for nfts get fee for nft 721 1`] = `
{
  "extraFeeData": {},
  "fee": "0.003051 MATICNATIVE",
  "gasLimit": 22600,
  "gasPrice": "0.000000135 MATICNATIVE",
  "tipGasPrice": "0.000000035 MATICNATIVE",
  "unsignedTx": {
    "txData": {
      "chainId": 137,
      "transactionBuffer": "02f892818980850826299e00851f6ea0860082584894bb42bf5aebbbeaef9335d8b497fb2cff2a010eed80b86442842e0e000000000000000000000000464f62159e067a8c231b5c3f9a7144e191750051000000000000000000000000464f62159e067a8c231b5c3f9a7144e1917500510000000000000000000000000000000000000000000000000000000000000001c0808080",
    },
    "txMeta": {
      "amount": "0 MATICNATIVE",
      "assetName": "matic",
      "bumpTxId": undefined,
      "eip1559Enabled": true,
      "fee": "0.003051 MATICNATIVE",
      "fromAddress": "0x464F62159e067a8C231b5c3F9A7144E191750051",
      "toAddress": "0x464F62159e067a8C231b5c3F9A7144E191750051",
    },
  },
}
`;
